# py_codeowners

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: main.py
src/: lib.rs
testdata/: CODEOWNERS
